apps/mautrix/whatsapp/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp
spec:
  hostnames:
    - mautrix-whatsapp.i.shikanime.studio
  parentRefs:
    - name: whatsapp
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsapp-redirect
spec:
  hostnames:
    - mautrix-whatsapp.i.shikanime.studio
  parentRefs:
    - name: whatsapp
      sectionName: http
